# mcp_practice

./: .env  .gitignore  LICENSE  README.md  pyproject.toml
scripts/: run_server.py
src/mcp_rally/: __init__.py  config.py  deps.py  models.py  rally_client.py  server.py  transcript.py
src/mcp_rally/analysis/: __init__.py  defects.py
src/mcp_rally/api/: __init__.py  defects.py  transcript.py
src/mcp_rally/auth/: __init__.py  rally.py
terraform/dev/: main.tf  terraform.tfvars  variables.tf
terraform/modules/ecr/: main.tf  variables.tf
terraform/modules/ecs_service/: main.tf  outputs.tf  variables.tf
terraform/prod/: main.tf  outputs.tf  providers.tf  terraform.tfvars  variables.tf
tests/: test_manual_endpoint.py  test_transcript_parser.py
